# tikz-mcp

./: .gitignore  PROMPT.md  README.md  STYLE_GUIDE.md  pyproject.toml
src/tikz_mcp/: __init__.py  server.py
