[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tikz-mcp"
version = "0.2.0"
description = "A lightweight MCP server for compiling and previewing TikZ diagrams"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Florian" },
]
keywords = ["mcp", "tikz", "latex", "diagram"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
tikz-mcp = "tikz_mcp.server:main"

[project.urls]
Homepage = "https://github.com/FlorianHuo/tikz-mcp"
Repository = "https://github.com/FlorianHuo/tikz-mcp"
Issues = "https://github.com/FlorianHuo/tikz-mcp/issues"
